--- a/task-maker-exec/Cargo.toml
+++ b/task-maker-exec/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 task-maker-dag = { path = "../task-maker-dag" }
 task-maker-store = { path = "../task-maker-store" }
 task-maker-cache = { path = "../task-maker-cache" }
+task-maker-rpc = { path = "../task-maker-rpc" }
 
 # Generic error utilities
 anyhow = { version = "1.0", features = ["backtrace"] }
